--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,23 +1,30 @@
-# Portuguese translations for trader package
-# Traduções em português brasileiro para o pacote trader.
-# Copyright (C) 2019 John Zaitseff
+# *************************************************************************
+# *                                                                       *
+# *          Brazilian Portuguese Translations for Star Traders           *
+# *        Traduções em português brasileiro para o pacote trader         *
+# *                   Copyright (C) 2019, John Zaitseff                   *
+# *                                                                       *
+# *************************************************************************
+#
 # This file is distributed under the same license as the trader package.
-# Rafael Fontenelle <rafaelff@gnome.org>, 2019.
+#
+# Contributors:
+#   Rafael Fontenelle <rafaelff@gnome.org>, 2019.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.13\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2019-11-13 08:14+1100\n"
-"PO-Revision-Date: 2019-11-18 13:10-0300\n"
+"PO-Revision-Date: 2019-11-19 21:14+1100\n"
 "Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <ldpbr-translation@lists.sourceforge.net>\n"
 "Language: pt_BR\n"
-"X-Bugs: Report translation errors to the Language-Team address.\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Bugs: Report translation errors to the Language-Team address.\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Virtaal 1.0.0-beta1\n"
 
 #. TRANSLATORS: The name of the game.  You may choose to translate it into
 #. your own language (recommended) or keep it the same as the English
@@ -36,7 +43,7 @@ msgstr "Jogue Comerciantes Estelares, um jogo simples de comércio interestelar"
 #. add your own keywords!
 #: data/trader.desktop.in:27
 msgid "game;interstellar;trading;strategy;"
-msgstr "jogo;game;interestelar;interstellar;comércio;trading;estratégia;strategy;"
+msgstr "jogo;interestelar;comércio;estratégia;"
 
 #. TRANSLATORS: This string is the name of the icon to use.  The Desktop
 #. Entry Specification states it is translatable, but unless you provide a
@@ -49,22 +56,22 @@ msgstr "trader"
 #: src/trader.c:235
 #, c-format
 msgid "%s: invalid value for --max-turn: '%s'\n"
-msgstr "%s: valor inválido para --max-turn: \"%s\"\n"
+msgstr "%s: valor inválido para --max-turn: “%s”\n"
 
 #: src/trader.c:251
 #, c-format
 msgid "%s: invalid operand '%s'\n"
-msgstr "%s: operando inválido \"%s\"\n"
+msgstr "%s: operando inválido “%s”\n"
 
 #: src/trader.c:260
 #, c-format
 msgid "%s: invalid game number '%s'\n"
-msgstr "%s: número de jogo inválido \"%s\"\n"
+msgstr "%s: número de jogo inválido “%s”\n"
 
 #: src/trader.c:269
 #, c-format
 msgid "%s: extra operand '%s'\n"
-msgstr "%s: operando extra \"%s\"\n"
+msgstr "%s: operando extra “%s”\n"
 
 #. TRANSLATORS: "John Zaitseff" [IPA d͡ʒɒn ˈzaɪ̯t͡səf] is the proper
 #. name of the author.  The IPA pronunciation in this comment is in
@@ -99,7 +106,7 @@ msgstr ""
 #: src/trader.c:308
 #, c-format
 msgid "%s: Try '%s --help' for more information.\n"
-msgstr "%s: Tente \"%s --help\" para mais informações.\n"
+msgstr "%s: Tente “%s --help” para mais informações.\n"
 
 #: src/trader.c:311
 #, c-format
@@ -112,7 +119,7 @@ msgid ""
 "Play Star Traders, a simple game of interstellar trading.\n"
 "\n"
 msgstr ""
-"Jogue Comerciantes Estelares, um jogo simples de comércio interstelar.\n"
+"Jogue Comerciantes Estelares, um jogo simples de comércio interestelar.\n"
 "\n"
 
 #: src/trader.c:315
@@ -139,9 +146,8 @@ msgid ""
 "playing that game.  If GAME is not specified, start a new game.\n"
 "\n"
 msgstr ""
-"Se JOGO for especificado como um número entre 1 e 9, carrega\n"
-"e continua jogando esse jogo. Se JOGO não for especificado,\n"
-"inicia um novo jogo.\n"
+"Se JOGO for especificado como um número entre 1 e 9, carrega e continua\n"
+"jogando esse jogo. Se JOGO não for especificado, inicia um novo jogo.\n"
 "\n"
 
 #. TRANSLATORS: The first %s is the proper name of the package
@@ -270,35 +276,35 @@ msgstr "abcdefghijklmnopqrst|output|GameMoves"
 #. (see ORDINAL_COLS in src/intf.h).
 #: src/globals.c:114
 msgid "1st"
-msgstr "1º"
+msgstr "Nº. 1"
 
 #: src/globals.c:115
 msgid "2nd"
-msgstr "2º"
+msgstr "Nº. 2"
 
 #: src/globals.c:116
 msgid "3rd"
-msgstr "3º"
+msgstr "Nº. 3"
 
 #: src/globals.c:117
 msgid "4th"
-msgstr "4º"
+msgstr "Nº. 4"
 
 #: src/globals.c:118
 msgid "5th"
-msgstr "5º"
+msgstr "Nº. 5"
 
 #: src/globals.c:119
 msgid "6th"
-msgstr "6º"
+msgstr "Nº. 6"
 
 #: src/globals.c:120
 msgid "7th"
-msgstr "7º"
+msgstr "Nº. 7"
 
 #: src/globals.c:121
 msgid "8th"
-msgstr "8º"
+msgstr "Nº. 8"
 
 #: src/game.c:117 src/game.c:152
 #, c-format
@@ -401,7 +407,7 @@ msgid ""
 "with a value of ^{%N^}."
 msgstr ""
 "O ganhador é ^{%ls^}\n"
-"Com um valor de ^{%N^}."
+"com um valor de ^{%N^}."
 
 #: src/game.c:597
 #, c-format
@@ -542,25 +548,25 @@ msgstr ""
 #, c-format
 msgctxt "label"
 msgid "Total value:   "
-msgstr "Valor total:     "
+msgstr "Valor total:       "
 
 #: src/game.c:800 src/exch.c:324
 #, c-format
 msgctxt "label"
 msgid "Current cash:  "
-msgstr "Dinheiro atual:  "
+msgstr "Dinheiro atual:    "
 
 #: src/game.c:807 src/exch.c:332
 #, c-format
 msgctxt "label"
 msgid "Current debt:  "
-msgstr "Dívida atual:    "
+msgstr "Dívida atual:      "
 
 #: src/game.c:813 src/exch.c:337
 #, c-format
 msgctxt "label"
 msgid "Interest rate: "
-msgstr "Taxa de juro:    "
+msgstr "Taxa de juro:      "
 
 #. TRANSLATORS: Each label may be up to 37 characters wide
 #. (for <1> and <2>) or 38 characters wide (for <3> and
@@ -644,7 +650,7 @@ msgstr "  Tribunal de Falências  "
 #: src/move.c:702
 #, c-format
 msgid "%ls has been declared bankrupt by the Interstellar Trading Bank."
-msgstr "%ls teve sua falência declarada pelo Banco de Comércio Interstelar."
+msgstr "%ls teve sua falência declarada pelo Banco de Comércio Interestelar."
 
 #. TRANSLATORS: %ls is the player's name.
 #: src/move.c:710
@@ -699,7 +705,7 @@ msgstr "Ações antigas: "
 #, c-format
 msgctxt "label"
 msgid "New stock: "
-msgstr "Novas ações: "
+msgstr "Novas ações:   "
 
 #. TRANSLATORS: "Bonus" refers to the bonus cash amount paid to
 #. each player after two companies merge.  %ls is the currency
@@ -829,7 +835,7 @@ msgid ""
 "left"
 msgstr ""
 "Ações\n"
-"Restantes"
+"restantes"
 
 #. TRANSLATORS: "Shares issued" is a two-line column
 #. label in a table containing the number of shares
@@ -881,7 +887,7 @@ msgstr "Insira uma seleção [^[Letra da empresa^]/^{1^}-^{4^}]: "
 #, c-format
 msgctxt "label"
 msgid "Credit limit:  "
-msgstr "Limite de crédito:  "
+msgstr "Limite de crédito: "
 
 #. TRANSLATORS: The "Borrow money", "Repay debt" and "Exit
 #. from the Bank" menu options must all be the same length
@@ -890,17 +896,17 @@ msgstr "Limite de crédito:  "
 #: src/exch.c:366
 #, c-format
 msgid "^{<1>^} Borrow money      "
-msgstr "^{<1>^} Pegar dinheiro    "
+msgstr "^{<1>^} Pegar dinheiro"
 
 #: src/exch.c:368
 #, c-format
 msgid "^{<2>^} Repay debt        "
-msgstr "^{<2>^} Pagar dívida      "
+msgstr "^{<2>^} Pagar dívida  "
 
 #: src/exch.c:370
 #, c-format
 msgid "^{<3>^} Exit from the Bank"
-msgstr "^{<3>^} Sair do Banco     "
+msgstr "^{<3>^} Sair do Banco "
 
 #: src/exch.c:373
 #, c-format
@@ -920,7 +926,7 @@ msgstr "O Banco não vai lhe emprestar mais dinheiro."
 #: src/exch.c:447
 #, c-format
 msgid "How much do you wish to borrow? "
-msgstr "Quanto você deseja pegar empresado? "
+msgstr "Quanto você deseja pegar emprestado? "
 
 #: src/exch.c:479
 #, c-format
@@ -1073,7 +1079,7 @@ msgstr ""
 #, c-format
 msgid "You can purchase ^{one^} share."
 msgid_plural "You can purchase up to ^{%'ld^} shares."
-msgstr[0] "Você pode comprar ^{one^} ação."
+msgstr[0] "Você pode comprar ^{uma^} ação."
 msgstr[1] "Você pode comprar até ^{%'ld^} ações."
 
 #: src/exch.c:742
@@ -1095,7 +1101,7 @@ msgstr "Você não possui ações para vender."
 #, c-format
 msgid "You can sell ^{one^} share."
 msgid_plural "You can sell up to ^{%'ld^} shares."
-msgstr[0] "Você pode vender ^{one^} ação."
+msgstr[0] "Você pode vender ^{uma^} ação."
 msgstr[1] "Você pode vender até ^{%'ld^} ações."
 
 #: src/exch.c:777
@@ -1153,12 +1159,12 @@ msgstr "%s: campo ilegal na linha %d"
 #: src/fileio.c:51
 #, c-format
 msgid "%s: illegal field on line %d: '%s'"
-msgstr "%s: campo ilegal na linha %d: \"%s\""
+msgstr "%s: campo ilegal na linha %d: “%s”"
 
 #: src/fileio.c:55
 #, c-format
 msgid "%s: illegal value on line %d: '%s'"
-msgstr "%s: valor ilegal na linha %d: \"%s\""
+msgstr "%s: valor ilegal na linha %d: “%s”"
 
 #: src/fileio.c:91 src/fileio.c:134 src/fileio.c:402
 #, c-format
@@ -1355,7 +1361,7 @@ msgstr ""
 "porcentagem) também muda.  Jogadores também podem  pedir emprestado ao Banco\n"
 "de Comércio Interestelar  para financiar outras compras na Bolsa de Valores.\n"
 "\n"
-"O mapa da galáxia  é representado  por uma grade  ^B~x^N x ^B~y^N.  Uma seção típica\n"
+"O mapa da galáxia  é representado  por uma grade  ^B~x^N × ^B~y^N.  Uma seção típica\n"
 "disso pode ser:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1382,7 +1388,7 @@ msgid ""
 "will set up  an ^Boutpost^N,  not belonging  to any company.  Thus, if move ^k~3^N is\n"
 "selected on the above map, a ^o ~+ ^N would be placed at that position.\n"
 msgstr ""
-"O computador seleciona  ^B~m^N movimentos (rotulados de ^k~1^N até ^k~M^N) aleatoriamente\n"
+"O computador seleciona ^B~m^N movimentos  (rotulados de ^k~1^N até ^k~M^N)  aleatoriamente\n"
 "e os coloca no mapa.  Para selecionar qualquer uma  das posições destacadas,\n"
 "pressione essa letra.  Por exemplo, alguns dos movimentos no mapa podem ser:\n"
 "\n"
@@ -1525,7 +1531,7 @@ msgstr ""
 "Selecionado  o seu movimento,  você entra na  ^BBolsa de Valores Interestelar^N.\n"
 "Aqui você pode comprar ações, vender, pedir emprestado ao  Banco de Comércio\n"
 "ou pagar parte de sua dívida (se aplicável).  Observe que cada empresa emite\n"
-"um número limitado de ações - você não pode continuar comprando para sempre!\n"
+"um número limitado de ações — você não pode continuar comprando para sempre!\n"
 "Você pode,  no entanto,  requisitar que mais ações sejam emitidas.  Você tem\n"
 "melhores chances de ter sucesso se tiver uma proporção maior da empresa.\n"
 "\n"
@@ -1591,12 +1597,12 @@ msgstr "[ Pressione <ESPAÇO> para continuar ou <BACKSPACE> para página anterio
 #: src/intf.c:110
 #, c-format
 msgid "%s: string has incorrect format: '%s'"
-msgstr "%s: a string possui um formato incorreto: \"%s\""
+msgstr "%s: a string possui um formato incorreto: “%s”"
 
 #: src/intf.c:126
 #, c-format
 msgid "%s: character has illegal width: '%lc'"
-msgstr "%s: o caractere possui largura ilegal: \"%lc\""
+msgstr "%s: o caractere possui largura ilegal: “%lc”"
 
 #: src/intf.c:435
 #, c-format
@@ -1611,7 +1617,7 @@ msgstr "mkchstr_conv: NULO"
 #: src/intf.c:1559
 #, c-format
 msgid "mkchstr: '%s'"
-msgstr "mkchstr: \"%s\""
+msgstr "mkchstr: “%s”"
 
 #. TRANSLATORS: This string specifies the keycodes used to insert the
 #. default value into the input string, if entered as the very first
@@ -1626,7 +1632,7 @@ msgstr "=;"
 #: src/intf.c:2025 src/intf.c:2070
 #, c-format
 msgid "gettxline: illegal character in string: '%ls'"
-msgstr "gettxline: caractere ilegal na string: \"%ls\""
+msgstr "gettxline: caractere ilegal na string: “%ls”"
 
 #. TRANSLATORS: The strings with msgctxt "input|Yes" and
 #. "input|No" contain the keycodes used to determine whether a
@@ -1672,7 +1678,7 @@ msgstr "memória esgotada"
 #: src/utils.c:1110
 #, c-format
 msgid "xmbstowcs: '%s'"
-msgstr "xmbstowcs: \"%s\""
+msgstr "xmbstowcs: “%s”"
 
 #: src/utils.c:1150
 #, c-format
@@ -1682,42 +1688,42 @@ msgstr "xwcrtomb: NULO"
 #: src/utils.c:1155
 #, c-format
 msgid "xwcrtomb: '%lc'"
-msgstr "xwcrtomb: \"%lc\""
+msgstr "xwcrtomb: “%lc”"
 
 #: lib/getopt.c:278 lib/obsolete-strings.c:45
 #, c-format
 msgid "%s: option '%s%s' is ambiguous\n"
-msgstr "%s: a opção \"%s%s\" é ambígua\n"
+msgstr "%s: a opção “%s%s” é ambígua\n"
 
 #: lib/getopt.c:284 lib/obsolete-strings.c:47
 #, c-format
 msgid "%s: option '%s%s' is ambiguous; possibilities:"
-msgstr "%s: a opção \"%s%s\" é ambígua; possibilidades:"
+msgstr "%s: a opção “%s%s” é ambígua; possibilidades:"
 
 #: lib/getopt.c:319 lib/obsolete-strings.c:49
 #, c-format
 msgid "%s: unrecognized option '%s%s'\n"
-msgstr "%s: opção desconhecida \"%s%s\"\n"
+msgstr "%s: opção desconhecida “%s%s”\n"
 
 #: lib/getopt.c:345 lib/obsolete-strings.c:51
 #, c-format
 msgid "%s: option '%s%s' doesn't allow an argument\n"
-msgstr "%s: a opção \"%s%s\" não permite um argumento\n"
+msgstr "%s: a opção “%s%s” não permite um argumento\n"
 
 #: lib/getopt.c:360 lib/obsolete-strings.c:53
 #, c-format
 msgid "%s: option '%s%s' requires an argument\n"
-msgstr "%s: a opção \"%s%s\" exige um argumento\n"
+msgstr "%s: a opção “%s%s” exige um argumento\n"
 
 #: lib/getopt.c:621 lib/obsolete-strings.c:55
 #, c-format
 msgid "%s: invalid option -- '%c'\n"
-msgstr "%s: opção inválida -- \"%c\"\n"
+msgstr "%s: opção inválida -- “%c”\n"
 
 #: lib/getopt.c:636 lib/getopt.c:682 lib/obsolete-strings.c:57
 #, c-format
 msgid "%s: option requires an argument -- '%c'\n"
-msgstr "%s: a opção exige um argumento -- \"%c\"\n"
+msgstr "%s: a opção exige um argumento -- “%c”\n"
 
 #. TRANSLATORS: These strings are used in older versions of various
 #. libraries, such as the GNU C Library as released with various
@@ -1725,134 +1731,134 @@ msgstr "%s: a opção exige um argumento -- \"%c\"\n"
 #: lib/obsolete-strings.c:44
 #, c-format
 msgid "%s: option `%s%s' is ambiguous\n"
-msgstr "%s: a opção \"%s%s\" é ambígua\n"
+msgstr "%s: a opção “%s%s” é ambígua\n"
 
 #: lib/obsolete-strings.c:46
 #, c-format
 msgid "%s: option `%s%s' is ambiguous; possibilities:"
-msgstr "%s: a opção \"%s%s\" é ambígua; possibilidades:"
+msgstr "%s: a opção “%s%s” é ambígua; possibilidades:"
 
 #: lib/obsolete-strings.c:48
 #, c-format
 msgid "%s: unrecognized option `%s%s'\n"
-msgstr "%s: opção desconhecida \"%s%s\"\n"
+msgstr "%s: opção desconhecida “%s%s”\n"
 
 #: lib/obsolete-strings.c:50
 #, c-format
 msgid "%s: option `%s%s' doesn't allow an argument\n"
-msgstr "%s: a opção \"%s%s\" não permite um argumento\n"
+msgstr "%s: a opção “%s%s” não permite um argumento\n"
 
 #: lib/obsolete-strings.c:52
 #, c-format
 msgid "%s: option `%s%s' requires an argument\n"
-msgstr "%s: a opção \"%s%s\" exige um argumento\n"
+msgstr "%s: a opção “%s%s” exige um argumento\n"
 
 #: lib/obsolete-strings.c:54
 #, c-format
 msgid "%s: invalid option -- `%c'\n"
-msgstr "%s: opção inválida -- \"%c\"\n"
+msgstr "%s: opção inválida -- “%c”\n"
 
 #: lib/obsolete-strings.c:56
 #, c-format
 msgid "%s: option requires an argument -- `%c'\n"
-msgstr "%s: a opção exige um argumento -- \"%c\"\n"
+msgstr "%s: a opção exige um argumento -- “%c”\n"
 
 #: lib/obsolete-strings.c:59
 #, c-format
 msgid "%s: option `%s' is ambiguous; possibilities:"
-msgstr "%s: a opção \"%s\" é ambígua; possibilidades:"
+msgstr "%s: a opção “%s” é ambígua; possibilidades:"
 
 #: lib/obsolete-strings.c:60
 #, c-format
 msgid "%s: option '%s' is ambiguous; possibilities:"
-msgstr "%s: a opção \"%s\" é ambígua; possibilidades:"
+msgstr "%s: a opção “%s” é ambígua; possibilidades:"
 
 #: lib/obsolete-strings.c:61
 #, c-format
 msgid "%s: option `%s' is ambiguous\n"
-msgstr "%s: a opção \"%s\" é ambígua\n"
+msgstr "%s: a opção “%s” é ambígua\n"
 
 #: lib/obsolete-strings.c:62
 #, c-format
 msgid "%s: option '%s' is ambiguous\n"
-msgstr "%s: a opção \"%s\" é ambígua\n"
+msgstr "%s: a opção “%s” é ambígua\n"
 
 #: lib/obsolete-strings.c:63
 #, c-format
 msgid "%s: option `--%s' doesn't allow an argument\n"
-msgstr "%s: a opção \"--%s\" não permite um argumento\n"
+msgstr "%s: a opção “--%s” não permite um argumento\n"
 
 #: lib/obsolete-strings.c:64
 #, c-format
 msgid "%s: option '--%s' doesn't allow an argument\n"
-msgstr "%s: a opção \"--%s\" não permite um argumento\n"
+msgstr "%s: a opção “--%s” não permite um argumento\n"
 
 #: lib/obsolete-strings.c:65
 #, c-format
 msgid "%s: option `%c%s' doesn't allow an argument\n"
-msgstr "%s: a opção \"%c%s\" não permite um argumento\n"
+msgstr "%s: a opção “%c%s” não permite um argumento\n"
 
 #: lib/obsolete-strings.c:66
 #, c-format
 msgid "%s: option '%c%s' doesn't allow an argument\n"
-msgstr "%s: a opção \"%c%s\" não permite um argumento\n"
+msgstr "%s: a opção “%c%s” não permite um argumento\n"
 
 #: lib/obsolete-strings.c:67
 #, c-format
 msgid "%s: option `--%s' requires an argument\n"
-msgstr "%s: a opção \"--%s\" exige um argumento\n"
+msgstr "%s: a opção “--%s” exige um argumento\n"
 
 #: lib/obsolete-strings.c:68
 #, c-format
 msgid "%s: option '--%s' requires an argument\n"
-msgstr "%s: a opção \"--%s\" requer um argumento\n"
+msgstr "%s: a opção “--%s” requer um argumento\n"
 
 #: lib/obsolete-strings.c:69
 #, c-format
 msgid "%s: unrecognized option `--%s'\n"
-msgstr "%s: opção desconhecida \"--%s\"\n"
+msgstr "%s: opção desconhecida “--%s”\n"
 
 #: lib/obsolete-strings.c:70
 #, c-format
 msgid "%s: unrecognized option '--%s'\n"
-msgstr "%s: opção desconhecida \"--%s\"\n"
+msgstr "%s: opção desconhecida “--%s”\n"
 
 #: lib/obsolete-strings.c:71
 #, c-format
 msgid "%s: unrecognized option `%c%s'\n"
-msgstr "%s: opção desconhecida \"%c%s\"\n"
+msgstr "%s: opção desconhecida “%c%s”\n"
 
 #: lib/obsolete-strings.c:72
 #, c-format
 msgid "%s: unrecognized option '%c%s'\n"
-msgstr "%s: opção desconhecida \"%c%s\"\n"
+msgstr "%s: opção desconhecida “%c%s”\n"
 
 #: lib/obsolete-strings.c:73
 #, c-format
 msgid "%s: option `-W %s' is ambiguous\n"
-msgstr "%s: a opção \"-W %s\" é ambígua\n"
+msgstr "%s: a opção “-W %s” é ambígua\n"
 
 #: lib/obsolete-strings.c:74
 #, c-format
 msgid "%s: option '-W %s' is ambiguous\n"
-msgstr "%s: a opção \"-W %s\" é ambígua\n"
+msgstr "%s: a opção “-W %s” é ambígua\n"
 
 #: lib/obsolete-strings.c:75
 #, c-format
 msgid "%s: option `-W %s' doesn't allow an argument\n"
-msgstr "%s: a opção \"-W %s\" não permite um argumento\n"
+msgstr "%s: a opção “-W %s” não permite um argumento\n"
 
 #: lib/obsolete-strings.c:76
 #, c-format
 msgid "%s: option '-W %s' doesn't allow an argument\n"
-msgstr "%s: a opção \"-W %s\" não permite um argumento\n"
+msgstr "%s: a opção “-W %s” não permite um argumento\n"
 
 #: lib/obsolete-strings.c:77
 #, c-format
 msgid "%s: option `-W %s' requires an argument\n"
-msgstr "%s: a opção \"-W %s\" exige um argumento\n"
+msgstr "%s: a opção “-W %s” exige um argumento\n"
 
 #: lib/obsolete-strings.c:78
 #, c-format
 msgid "%s: option '-W %s' requires an argument\n"
-msgstr "%s: a opção \"-W %s\" exige um argumento\n"
+msgstr "%s: a opção “-W %s” exige um argumento\n"
