--- a/NEWS
+++ b/NEWS
@@ -24,7 +24,8 @@ Version 7.14 (not yet released)
 -------------------------------
 
 Added the Brazilian Portuguese translation, with thanks to Rafael
-Fontenelle.
+Fontenelle.  Updated the French translation, with thanks to Frédéric
+Marchal.
 
 
 Version 7.13 (13th November, 2019)
