Add links to the Git repository

--- a/README
+++ b/README
@@ -61,6 +61,9 @@ warmly welcomed!  Please send these to:
     :Web:     | https://www.zap.org.au/projects/trader/
     :FTP:     | https://ftp.zap.org.au/pub/trader/
               | ftp://ftp.zap.org.au/pub/trader/
+    :Git:     | https://www.zap.org.au/git-browser/trader.git
+              | https://git.zap.org.au/git/trader.git
+              | git://git.zap.org.au/data/git/trader.git
 
 
 Copyright
