--- a/doc/trader.6
+++ b/doc/trader.6
@@ -208,6 +208,13 @@ Australia
 .URL https://ftp.zap.org.au/pub/trader/
 .br
 .FTP ftp://ftp.zap.org.au/pub/trader/
+.PD 0
+.IP Git: 10n
+.URL https://www.zap.org.au/git-browser/trader.git
+.br
+.URL https://git.zap.org.au/git/trader.git
+.br
+.URL git://git.zap.org.au/data/git/trader.git
 .PD
 .PP
 .\" *********************************************************************
