Mention the updated Esperanto translation

--- a/NEWS
+++ b/NEWS
@@ -24,8 +24,8 @@ Version 7.14 (not yet released)
 -------------------------------
 
 Added the Brazilian Portuguese translation, with thanks to Rafael
-Fontenelle.  Updated the French translation, with thanks to Frédéric
-Marchal.
+Fontenelle.  Updated the French and Esperanto translations, with thanks
+to Frédéric Marchal and Felipe Castro.
 
 
 Version 7.13 (13th November, 2019)
