--- a/NEWS
+++ b/NEWS
@@ -24,8 +24,8 @@ Version 7.14 (not yet released)
 -------------------------------
 
 Added the Brazilian Portuguese translation, with thanks to Rafael
-Fontenelle.  Updated the French and Esperanto translations, with thanks
-to Frédéric Marchal and Felipe Castro.
+Fontenelle.  Updated the French, Hungarian and Esperanto translations, in
+that order, with thanks to Frédéric Marchal, Balázs Úr and Felipe Castro.
 
 
 Version 7.13 (13th November, 2019)
