--- a/INSTALL
+++ b/INSTALL
@@ -236,7 +236,8 @@ macOS 10.15              x86_64  Apple Clang (LLVM) 11.0.0     [#macos2]_
 Solaris 11.4 (x86_64)    x86_64  GNU C Compiler 7.3.0          [#solaris1]_
 Solaris 11.4 (x86_64)    i386    Oracle Developer Studio 12.6  [#solaris2]_
 Solaris 11.4 (x86_64)    x86_64  Oracle Developer Studio 12.6  [#solaris3]_
-Cygwin 3.0.7 (Win7 SP1)  i686    GNU C Compiler 7.4.0
+Cygwin 3.1.2 (Win7 SP1)  i686    GNU C Compiler 7.4.0
+Cygwin 3.1.2 (Win10)     x86_64  GNU C Compiler 7.4.0
 =======================  ======  ============================  ============
 
 Notes:
