Update relevant dates: we release today!

--- a/NEWS
+++ b/NEWS
@@ -20,8 +20,8 @@ __ https://www.zap.org.au/
 .. contents::
 
 
-Version 7.14 (not yet released)
--------------------------------
+Version 7.14 (9th January, 2020)
+--------------------------------
 
 Added the Brazilian Portuguese translation, with thanks to Rafael
 Fontenelle.  Updated the French, Hungarian and Esperanto translations, in
