--- a/doc/trader.6
+++ b/doc/trader.6
@@ -41,7 +41,7 @@
 .if \n[.g] .mso www.tmac
 .\"
 .\" *********************************************************************
-.TH TRADER 6 "2nd January, 2020" "Unix-like systems"
+.TH TRADER 6 "9th January, 2020" "Unix-like systems"
 .SH NAME
 trader \- a game of interstellar trading
 .\" *********************************************************************
