Start preparing for version 7.15

--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,12 @@ __ https://www.zap.org.au/
 .. contents::
 
 
+Version 7.15 (not yet released)
+-------------------------------
+
+(No changes yet)
+
+
 Version 7.14 (9th January, 2020)
 --------------------------------
 
