Update INSTALL file for NetBSD 9.0

--- a/INSTALL
+++ b/INSTALL
@@ -230,7 +230,7 @@ OpenSUSE Leap 15.1     x86_64  2.26   GNU C Compiler 7.4.1
 Operating system         Arch    Compiler                      Notes
 =======================  ======  ============================  ============
 FreeBSD 12.1             x86_64  Clang (LLVM) 8.0.1            [#freebsd1]_
-NetBSD 8.1               x86_64  GNU C Compiler 5.5.0          [#netbsd1]_
+NetBSD 9.0               x86_64  GNU C Compiler 7.4.0          [#netbsd1]_
 macOS 10.15              x86_64  Apple Clang (LLVM) 11.0.0     [#macos1]_
 macOS 10.15              x86_64  Apple Clang (LLVM) 11.0.0     [#macos2]_
 Solaris 11.4 (x86_64)    x86_64  GNU C Compiler 7.3.0          [#solaris1]_
@@ -250,7 +250,8 @@ Notes:
                     --with-libintl-prefix=/usr/local
 
 .. [#netbsd1] NetBSD with the ``gettext``, ``libiconv`` and ``ncursesw``
-   packages installed with ``pkg_add``\(1), using::
+   packages installed with ``pkgin``\(1) (or ``pkg_add``\(1) in older
+   versions of NetBSD), using::
 
         ./configure --with-libiconv-prefix=/usr/pkg  \
                     --with-libintl-prefix=/usr/pkg   \
