Tweak reStructuredText files using the default interpreted text role

--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,6 @@
 .. -*- mode: rst; coding: utf-8 -*-
+.. role:: filename(literal)
+.. default-role:: filename
 
 ============================================
 Star Traders: A Game of Interstellar Trading
