--- a/NEWS
+++ b/NEWS
@@ -25,7 +25,9 @@ __ https://www.zap.org.au/
 Version 7.15 (not yet released)
 -------------------------------
 
-(No changes yet)
+Updated to the latest snapshot of the Gnulib GNU Portability Library.
+Also updated the `INSTALL` file to list the latest tested versions of
+operating systems, including a new listing for Haiku R1/beta2.
 
 
 Version 7.14 (9th January, 2020)
