Update to GNU Gettext 0.20 or later

--- a/INSTALL
+++ b/INSTALL
@@ -46,11 +46,10 @@ and installation:
     wide-character version of Curses, such as NcursesW, to work
     correctly.
 
-4.  The GNU Gettext library, version 0.19.8 or later, to allow the game
-    to use languages other than English; this is also called Native
-    Language Support.  If you do not have this library (and do not wish
-    to install it), you may pass ``--disable-nls`` to the configure
-    script.
+4.  The GNU Gettext library, version 0.20 or later, to allow the game to
+    use languages other than English; this is also called Native Language
+    Support.  If you do not have this library (and do not wish to install
+    it), you may pass ``--disable-nls`` to the configure script.
 
 5.  The GNU ``libiconv`` library for supporting multiple character
     encodings, if required by the GNU Gettext library.  This is not
