Use ASCII single-quote instead of right quote characters

--- a/doc/trader.6
+++ b/doc/trader.6
@@ -136,7 +136,7 @@ experience, try (again, typed all on one line):
 .sp
 .nh
 .na
-.B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg '#181818' \-fg '#2CAB00' \-bc +sb +bdc +fbx \-xrm 'XTerm*colorBD: #41FF00' \-e trader \-\-no\-colour &"
+.B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg \(aq#181818\(aq \-fg \(aq#2CAB00\(aq \-bc +sb +bdc +fbx \-xrm \(aqXTerm*colorBD: #41FF00\(aq \-e trader \-\-no\-colour &"
 .ad
 .hy 14
 .sp
@@ -146,7 +146,7 @@ Or, if you prefer the old amber screens of yesteryear:
 .sp
 .nh
 .na
-.B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg '#101010' \-fg '#AB7A00' \-bc +sb +bdc +fbx \-xrm 'XTerm*colorBD: #FFB700' \-e trader \-\-no\-colour &"
+.B "xterm \-g 80x24 \-fa Mono \-fs 18 \-bg \(aq#101010\(aq \-fg \(aq#AB7A00\(aq \-bc +sb +bdc +fbx \-xrm \(aqXTerm*colorBD: #FFB700\(aq \-e trader \-\-no\-colour &"
 .ad
 .hy 14
 .sp
