Use the XDG Base Directory Specification for storing game files

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,14 @@ __ https://www.zap.org.au/
 Version 7.15 (not yet released)
 -------------------------------
 
+Changed the default location where game files are saved from `~/.trader`
+to `~/.local/share/trader`, so as to follow the `XDG Base Directory
+Specification`__.  If set, the ``XDG_DATA_HOME`` environment variable
+will override this location.  If the `~/.trader` directory is already
+present, it will continue to be used.  Updated the manual page to suit.
+
+__ https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html
+
 Updated to GNU Gettext 0.20 or later.  Updated to the latest snapshot of
 the Gnulib GNU Portability Library.  Also updated the `INSTALL` file to
 list the latest tested versions of operating systems, including a new
