--- a/doc/trader.6
+++ b/doc/trader.6
@@ -154,6 +154,15 @@ Or, if you prefer the old amber screens of yesteryear:
 .\" *********************************************************************
 .SH ENVIRONMENT
 .TP
+.BR XDG_DATA_HOME ", " HOME
+If \fBXDG_DATA_HOME\fR is set to an absolute pathname (that is, a path
+that starts with \*(lq\fI/\fR\*(rq), Star Traders will use that
+directory, with a subdirectory \fItrader\fR, to store game files.  If
+this environment variable is not set or does not start with
+\*(lq\fI/\fR\*(rq, \fI\(ti/.local/share/trader\fR will be used instead,
+where \*(lq\fI\(ti\fR\*(rq represents your home directory, as contained
+in the \fBHOME\fR environment variable.
+.TP
 .BR LINES ", " COLUMNS
 Star Traders uses the Curses library for displaying text on the screen.
 As such, it will access these two environment variables if the underlying
@@ -177,11 +186,17 @@ manual pages for more details on locale settings.
 .\" *********************************************************************
 .SH FILES
 .TP
+.IB \(ti/.local/share/trader/game N
+Star Traders stores saved game files in the \fI.local/share/trader\fR
+subdirectory in your home directory (unless overriden by the
+\fBXDG_DATA_HOME\fR environment variable).  \fIN\fR is a number between
+\fB1\fR and \fB9\fR inclusive.  The game file is scrambled to prevent you
+or others from casually cheating!
+.TP
 .IB \(ti/.trader/game N
-Star Traders stores saved game files in the \fI.trader\fR subdirectory in
-your home directory.  \fIN\fR is a number between \fB1\fR and \fB9\fR
-inclusive.  The game file is scrambled to prevent you or others from
-casually cheating!
+If the \fI\(ti/.trader\fR directory exists, game files will be read from
+and saved to this location instead.  This is for compatibility with
+versions of Star Traders prior to version 7.15.
 .\" *********************************************************************
 .SH BUGS
 None yet known...
