--- a/po/ru.po
+++ b/po/ru.po
@@ -18,14 +18,13 @@ msgstr ""
 "Project-Id-Version: trader 7.15\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2021-01-07 23:30+1100\n"
-"PO-Revision-Date: 2021-01-07 16:59+1100\n"
-"Last-Translator: Pavel Maryanov <acid@jack.kiev.ua>\n"
+"PO-Revision-Date: 2021-01-08 00:14+1100\n"
+"Last-Translator: John Zaitseff <J.Zaitseff@zap.org.au>\n"
 "Language-Team: Russian <gnu@d07.ru>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Bugs: Report translation errors to the Language-Team address.\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. TRANSLATORS: The name of the game.  You may choose to translate it into
@@ -820,7 +819,7 @@ msgstr ""
 "Ваш долг составляет %N!\n"
 "\n"
 "^{Межзвёздный торговый банк конфисковал^}\n"
-"%N^{ из ваших наличных денег.^}"
+"%N^{ из Ваших наличных денег.^}"
 
 #: src/exch.c:98
 #, c-format
@@ -926,12 +925,12 @@ msgstr "  Недостаточный предел кредита  "
 #: src/exch.c:427
 #, c-format
 msgid "The Bank will not lend you any more money."
-msgstr "Банк не готов предоставлять вам больше денег."
+msgstr "Банк не готов предоставлять Вам больше денег."
 
 #: src/exch.c:447
 #, c-format
 msgid "How much do you wish to borrow? "
-msgstr "Сколько вы хотите взять в кредит? "
+msgstr "Сколько Вы хотите взять в кредит? "
 
 #: src/exch.c:479
 #, c-format
@@ -941,7 +940,7 @@ msgstr "  Нет долга  "
 #: src/exch.c:480
 #, c-format
 msgid "You have no debt to repay."
-msgstr "У вас нет долга для погашения."
+msgstr "У Вас нет долга для погашения."
 
 #: src/exch.c:484
 #, c-format
@@ -951,12 +950,12 @@ msgstr "  Нет наличных  "
 #: src/exch.c:485
 #, c-format
 msgid "You have no cash with which to repay the debt!"
-msgstr "У вас нет наличных для погашения долга!"
+msgstr "У Вас нет наличных для погашения долга!"
 
 #: src/exch.c:505
 #, c-format
 msgid "How much do you wish to repay? "
-msgstr "Сколько вы хотите вернуть? "
+msgstr "Сколько Вы хотите вернуть? "
 
 #. TRANSLATORS: %ls represents the company name.
 #: src/exch.c:581
@@ -1077,7 +1076,7 @@ msgid ""
 "You do not have enough cash\n"
 "to purchase additional shares."
 msgstr ""
-"У вас недостаточно наличных денег, чтобы\n"
+"У Вас недостаточно наличных денег, чтобы\n"
 "приобрести дополнительные акции."
 
 #: src/exch.c:736
@@ -1091,7 +1090,7 @@ msgstr[2] "Вы можете приобрести до ^{%'ld^} акций."
 #: src/exch.c:742
 #, c-format
 msgid "How many shares do you wish to purchase? "
-msgstr "Сколько акций вы хотите приобрести? "
+msgstr "Сколько акций Вы хотите приобрести? "
 
 #: src/exch.c:763
 #, c-format
@@ -1101,7 +1100,7 @@ msgstr "  Нет акций  "
 #: src/exch.c:764
 #, c-format
 msgid "You do not have any shares to sell."
-msgstr "У вас нет ни одной акции для продажи."
+msgstr "У Вас нет ни одной акции для продажи."
 
 #: src/exch.c:771
 #, c-format
@@ -1114,7 +1113,7 @@ msgstr[2] "Вы можете продать до ^{%'ld^} акций."
 #: src/exch.c:777
 #, c-format
 msgid "How many shares do you wish to sell? "
-msgstr "Сколько акций вы хотите продать? "
+msgstr "Сколько акций Вы хотите продать? "
 
 #: src/exch.c:805
 #, c-format
@@ -1431,12 +1430,12 @@ msgid ""
 msgstr ""
 "При выборе позиции  рядом со звездой (или рядом с форпостом),  будет сформи-\n"
 "ровано ^Bновое торговое предприятие^N,  и код этой новой фирмы появится на карте\n"
-"галактики.  В качестве награды за создание компании, вы получите первые пять\n"
+"галактики.  В качестве награды за создание компании, Вы получите первые пять\n"
 "акций.  До ^B~c-и^N компаний могут быть созданы таким образом.\n"
 "\n"
 "При выборе позиции рядом с уже существующей компанией, эта компания расширит\n"
 "свою деятельность  на одну  клетку.  Это увеличивает  стоимость её  акций и,\n"
-"следовательно, вашего дохода.  Таким образом,  выбор позиции ^k~6^N или ^k~8^N на ука-\n"
+"следовательно, Вашего дохода.  Таким образом,  выбор позиции ^k~6^N или ^k~8^N на ука-\n"
 "занной ниже карте расширяет маршруты компании ^B~B^N:\n"
 "\n"
 "        ^e ^k~1^e ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
@@ -1463,7 +1462,7 @@ msgid ""
 "more valuable:  the company's share price  will increase by a greater amount\n"
 "than it would for outposts not next to stars.\n"
 msgstr ""
-"Выбор позиции рядом со звездой  увеличивает стоимость ваших акций примерно в\n"
+"Выбор позиции рядом со звездой  увеличивает стоимость Ваших акций примерно в\n"
 "пять  раз, по сравнению  с расширением  фирмы клеткой  не рядом  со звездой.\n"
 "Таким образом, позиция ^k~6^N является более предпочтительной, чем позиция ^k~8^N.\n"
 "\n"
@@ -1534,21 +1533,21 @@ msgid ""
 "The ^Bwinner of the game^N  is the person  with the greatest  net  worth  (total\n"
 "value of cash, stock and debt).  ^HGood luck^N and may the best person win!\n"
 msgstr ""
-"После выбора позиции, вы оказываетесь на  ^BМежзвёздной фондовой бирже^N.  Здесь\n"
-"вы можете приобретать акции, продавать их, занимать деньги у торгового банка\n"
+"После выбора позиции, Вы оказываетесь на  ^BМежзвёздной фондовой бирже^N.  Здесь\n"
+"Вы можете приобретать акции, продавать их, занимать деньги у торгового банка\n"
 "или погашать  часть своего долга  (если применимо).  Обратите  внимание, что\n"
 "каждая компания выпускает ограниченное количество акций ― нельзя просто бес-\n"
 "конечно покупать!   Однако,  можно предлагать фирме выпустить  больше акций.\n"
-"Чем больше ваше владение в фирме, тем больше шансов получить больше акций.\n"
+"Чем больше Ваше владение в фирме, тем больше шансов получить больше акций.\n"
 "\n"
 "Игра обычно заканчивается  после ^B~t-и^N ходов.  Однако,  можно  закончить игру\n"
 "раньше, нажав ^K<CTRL><C>^N вместо выбора позиции.  Кроме того, отдельные игроки\n"
-"могут  объявить себя  банкротом  в любой момент.   Если ваш  долг достаточно\n"
-"велик, банк  может сделать  это за вас!   Если не хватает  времени закончить\n"
-"игру, вы можете сохранить её и продолжить позже.\n"
+"могут  объявить себя  банкротом  в любой момент.   Если Ваш  долг достаточно\n"
+"велик, банк  может сделать  это за Вас!   Если не хватает  времени закончить\n"
+"игру, Вы можете сохранить её и продолжить позже.\n"
 "\n"
 "^BПобедителем игры^N  является игрок с самой большой  нетто-стоимостью, то есть,\n"
-"разностью между активами (наличные деньги + акции) и долгом.  ^HУдачи вам^N ― да\n"
+"разностью между активами (наличные деньги + акции) и долгом.  ^HУдачи Вам^N ― да\n"
 "победит лучший игрок!\n"
 
 #: src/help.c:225
