Start preparing for version 7.16

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,12 @@ __ https://www.zap.org.au/
 .. contents::
 
 
+Version 7.16 (not yet released)
+-------------------------------
+
+(No changes yet)
+
+
 Version 7.15 (12th January, 2021)
 ---------------------------------
 
